--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/SWE1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqljdbc.jar=C:\\Program Files\\Microsoft JDBC Driver 4.0 for SQL Server\\sqljdbc_4.0\\deu\\sqljdbc.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqljdbc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
