TemperatureSystem partly done

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/SWE1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.sqljdbc.jar=C:\\Program Files\\Microsoft JDBC Driver 4.0 for SQL Server\\sqljdbc_4.0\\deu\\sqljdbc.jar
+file.reference.sqljdbc4.jar=C:\\Program Files\\Microsoft JDBC Driver 4.0 for SQL Server\\sqljdbc_4.0\\deu\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc.jar}
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
